--- a/mybatis/config/db.properties
+++ b/mybatis/config/db.properties
@@ -1,5 +1,5 @@
-#jdbc≈‰÷√
+#jdbc\u914d\u7f6e
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/mybatis?characterEncoding=utf-8
-jdbc.username=admin
-jdbc.password=admin
+jdbc.url=jdbc:mysql://192.168.1.180:3306/mybatis?characterEncoding=utf-8
+jdbc.username=root
+jdbc.password=root
