--- a/designpattern/pom.xml
+++ b/designpattern/pom.xml
@@ -3,4 +3,16 @@
   <groupId>designpattern</groupId>
   <artifactId>designpattern</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>7</source>
+                    <target>7</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
