事务的传播行为

--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
   <module>leetcode</module>
   <module>sm</module>
     <module>base</module>
+    <module>db</module>
 
 </modules>
   <dependencies>
