--- a/demo1200-eurekaserver/pom.xml
+++ b/demo1200-eurekaserver/pom.xml
@@ -11,7 +11,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.eplusing</groupId>
-    <artifactId>eureka-server</artifactId>
+    <artifactId>demo1200-eurekaserver</artifactId>
     <version>1.0.0</version>
     <packaging>jar</packaging>
 
