--- a/demo1200-kafka/pom.xml
+++ b/demo1200-kafka/pom.xml
@@ -3,15 +3,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <groupId>com.eplusing</groupId>
-    <artifactId>demo1200-db</artifactId>
+    <artifactId>demo1200-kafka</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-
-    <name>db</name>
-    <!-- FIXME change it to the project's website -->
-    <url>http://www.example.com</url>
-
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.7</maven.compiler.source>
@@ -19,28 +13,12 @@
     </properties>
 
     <dependencies>
-
-        <!-- 引入starter-->
-        <dependency>
-            <groupId>org.mybatis.spring.boot</groupId>
-            <artifactId>mybatis-spring-boot-starter</artifactId>
-            <version>1.3.2</version>
-        </dependency>
-
-        <!-- MySQL的JDBC驱动包  -->
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.23</version>
-        </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.13</version>
+            <version>4.11</version>
             <scope>test</scope>
         </dependency>
-
-
     </dependencies>
 
     <build>
