--- a/demo1200-springboot/pom.xml
+++ b/demo1200-springboot/pom.xml
@@ -25,8 +25,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
             <version>2.3.0.RELEASE</version>
-            <!-- springboot默认使用tomcat <exclusions> <exclusion> <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-tomcat</artifactId> </exclusion> </exclusions> -->
         </dependency>
         <!--      jetty
               <dependency>
@@ -40,8 +38,11 @@
             <artifactId>spring-tx</artifactId>
             <version>4.3.20.RELEASE</version>
         </dependency>
-        <!-- <dependency> <groupId>com.zaxxer</groupId> <artifactId>HikariCP</artifactId>
-            <version>3.3.1</version> </dependency> -->
+        <dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+            <version>3.3.1</version>
+        </dependency>
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid</artifactId>
