--- a/demo1200-springboot/pom.xml
+++ b/demo1200-springboot/pom.xml
@@ -136,6 +136,12 @@
             <artifactId>spring-test</artifactId>
             <version>5.2.6.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>2.9.0</version>
+            <scope>compile</scope>
+        </dependency>
 
         <!-- <dependency> <groupId>com.google.code.gson</groupId> <artifactId>gson</artifactId>
             <version>2.8.5</version> </dependency> -->
