--- a/demo1200-mybatis/pom.xml
+++ b/demo1200-mybatis/pom.xml
@@ -20,6 +20,11 @@
       <artifactId>mybatis</artifactId>
       <version>3.4.6</version>
     </dependency>
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>5.1.8</version>
+    </dependency>
   </dependencies>
 
   <build>
