--- a/demo1200-zuul/pom.xml
+++ b/demo1200-zuul/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.eplusing</groupId>
-  <artifactId>demo1200-zull</artifactId>
+  <artifactId>demo1200-zuul</artifactId>
   <version>0.0.1-SNAPSHOT</version>
 
   <name>demo1200-zull</name>
@@ -19,12 +19,7 @@
   </properties>
 
   <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.11</version>
-      <scope>test</scope>
-    </dependency>
+
   </dependencies>
 
   <build>
