--- a/demo1200-activemq/src/main/resources/application.yml
+++ b/demo1200-activemq/src/main/resources/application.yml
@@ -16,6 +16,6 @@ spring:
     topic-name: active.topic.name.model
 
   pool:
-    enabled: true
+    enabled: true  #
     max-connections: 10   #连接池最大连接数
     idle-timeout: 30000   #空闲的连接过期时间，默认为30秒
