--- a/demo1200-activemq/src/main/resources/application.yml
+++ b/demo1200-activemq/src/main/resources/application.yml
@@ -1,8 +1,10 @@
 server:
   port: 8080
+  servlet:
+    context-path: /activemq
 spring:
   application:
-    name: messageProducer
+    name: activemq
 
   activemq:
     broker-url: tcp://192.168.145.136:61617
