--- a/demo1200-oracle/pom.xml
+++ b/demo1200-oracle/pom.xml
@@ -10,7 +10,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.eplusing</groupId>
-    <artifactId>demo1200-activemq</artifactId>
+    <artifactId>demo1200-oracle</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
     <properties>
