--- a/demo1200-base/pom.xml
+++ b/demo1200-base/pom.xml
@@ -18,6 +18,18 @@
   </properties>
 
   <dependencies>
+      <dependency>
+          <groupId>commons-lang</groupId>
+          <artifactId>commons-lang</artifactId>
+          <version>2.6</version>
+          <scope>compile</scope>
+      </dependency>
+    <dependency>
+      <groupId>com.alibaba</groupId>
+      <artifactId>fastjson</artifactId>
+      <version>1.2.70</version>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
 
   <build>
