--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.eplusing</groupId>
-    <artifactId>epay</artifactId>
+    <artifactId>demo1200</artifactId>
     <version>1.0.0</version>
     <packaging>pom</packaging>
 
