--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,7 @@
         <module>demo1200-zeromq</module>
         <module>demo1200-zuul</module>
         <module>demo1200-mysql</module>
+        <module>demo1200-ibmwebspheremq</module>
 
     </modules>
 
