--- a/demo1200-base/pom.xml
+++ b/demo1200-base/pom.xml
@@ -99,6 +99,16 @@
       <version>2.8.6</version>
       <scope>compile</scope>
     </dependency>
+    <dependency>
+      <groupId>cn.hutool</groupId>
+      <artifactId>hutool-all</artifactId>
+      <version>5.8.20</version>
+    </dependency>
+    <dependency>
+      <groupId>com.sun.mail</groupId>
+      <artifactId>javax.mail</artifactId>
+      <version>1.6.2</version>
+    </dependency>
   </dependencies>
 
   <build>
