--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,7 @@
         <module>demo1200-ibmwebspheremq</module>
         <module>demo1200-doc</module>
         <module>demo1200-k8s</module>
+        <module>demo1200-shell</module>
     </modules>
 
 </project>
