--- a/demo1200-activity/pom.xml
+++ b/demo1200-activity/pom.xml
@@ -20,6 +20,12 @@
 
   <dependencies>
 
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.13</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
