--- a/demo1200-apollo/pom.xml
+++ b/demo1200-apollo/pom.xml
@@ -19,7 +19,12 @@
   </properties>
 
   <dependencies>
-
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.13</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
